--- a/hw/hw1/hw1.tex
+++ b/hw/hw1/hw1.tex
@@ -166,8 +166,8 @@ Now expanding this, we get a total of
   4c\frac{\frac{n}{2}\left(\frac{n}{2} + 1\right)}{2}\\
   &= 4cn + 2c\left(\frac{1}{4}n^2 + \frac{1}{2}n\right)\\
   &= 4cn + \frac{1}{2}n^2c + cn\\
-  &= \frac{1}{2}cn^2 + 5cn
-  &= O(n^2}
+  &= \frac{1}{2}cn^2 + 5cn\\
+  &= O(n^2)
 \end{split}
 \end{equation}
 
@@ -235,8 +235,8 @@ The entire operations count together then would be
   \begin{split}
     4cn + 2c\left(\frac{1}{4}n^2 - \frac{1}{2}n\right)&= 
     4cn + \frac{1}{2}cn^2 - cn\\
-    &= \frac{1}{2}cn^2 + 3cn
-    &= O(n^2}
+    &= \frac{1}{2}cn^2 + 3cn\\
+    &= O(n^2)
   \end{split}
 \end{equation}
 Now for the other example, let's see what it looks like:
@@ -256,7 +256,7 @@ Now for the other example, let's see what it looks like:
 Essentially, the idea is the same, in that the iterations can be split
 into pairs such that a pair will use the inner loop (to move larger
 numbers) the same number of times.  Thus the analysis is (almost)
-exactly the same: $ O(n^2}$.
+exactly the same: $ O(n^2)$.
 
 
 \end{enumerate}
@@ -414,4 +414,37 @@ terminate when either the solution is found or the entire list is
 added during the 3rd loop, which will then constitute a solution
 (because one has to exist).
 
+Pseudocode for the algorithm can be laid out as 
+{\singlespacing
+\begin{algorithmic}
+  \State $cap \gets$ Knapsack size/capacity
+  \For{$i = 1,3,\dots,n$} 
+  \If{$k[i] \le k[i+1]$}
+  \State Swap($k[i],k[i+1]$)
+  \EndIf
+  \EndFor
+  \State $Sz = 0$
+  \State // Let's fill in the larger sizes first
+  \For{$i = 1,3,\dots,n$}
+  \If{ $Sz + k[i] \le cap$}
+  \State $Sz \gets Sz + k[i]$
+  \EndIf
+  \If{ $Sz \ge \frac{cap}{2}$}
+  \State return
+  \EndIf
+  \EndFor
+  \State // Now, start filling in the smaller sizes
+  \For{$i = 2,4,\dots,n$}
+  \If{ $Sz + k[i] \le cap$}
+  \State $Sz \gets Sz + k[i]$
+  \EndIf
+  \If{ $Sz \ge \frac{cap}{2}$}
+  \State return
+  \EndIf
+  \EndFor
+\end{algorithmic}
+}
+The runtime for this algorithm is $O(\frac{3}{2}n)$, because at the
+most it will utilize all three for-loops which are each over only half
+the length of the array.
 \end{document}
